[package]
name = "srs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs_opaque = { path = "../srs_opaque" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.2"
tokio = "1.32.0"
tokio-postgres = { version="0.7.10", features=["with-chrono-0_4", "with-serde_json-1"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool = "0.9.5"
deadpool-postgres = "0.10.5"
blstrs = { version = "0.7.0", features = ["serde"] }
ff = "0.13.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
zeroize = "1.6.0"
generic-array = "0.14.7"
typenum = "1.16.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
argon2 = "0.5.1"
dotenv = "0.15.0"
config = "0.13.3"
regex = "1"
lazy_static = "1"
redis = { version = "0.23.3", features = ["json"] }
chrono = "0.4.31"
futures = "0.3.28"
group = "0.13.0"
sha2 = "0.10.8"
env_logger = "0.10.0"
log = "0.4.20"
thiserror = "1.0.49"